--- a/stage.html
+++ b/stage.html
@@ -36,9 +36,19 @@
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
 
+        h3 {
+            font-size: 1.4em;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            color: #ffd07a;
+            text-transform: none;
+            letter-spacing: 0.2px;
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.25);
+        }
+
         p, ul {
             font-size: 1.2em;
-            max-width: 900px;
+            max-width: 1000px;
             text-align: justify;
             margin-bottom: 20px;
             color: #ecf0f1;
@@ -55,9 +65,9 @@
         }
 
         ul li {
-            margin-bottom: 15px;
+            margin-bottom: 12px;
             position: relative;
-            padding-left: 25px;
+            padding-left: 28px;
         }
 
         ul li::before {
@@ -79,6 +89,35 @@
             text-align: left;
         }
 
+        .meta {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin: 10px 0 20px 0;
+        }
+
+        .badge {
+            border: 1.5px solid #f39c12;
+            color: #f39c12;
+            padding: 6px 10px;
+            border-radius: 999px;
+            font-size: 0.95em;
+            display: inline-block;
+            background: rgba(243, 156, 18, 0.08);
+        }
+
+        .grid-2 {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 12px;
+        }
+
+        @media (min-width: 900px) {
+            .grid-2 {
+                grid-template-columns: 1fr 1fr;
+            }
+        }
+
         a {
             color: #f39c12;
             text-decoration: none;
@@ -96,14 +135,124 @@
             background-color: #f39c12;
             color: #fff;
         }
+
+        .divider {
+            height: 1px;
+            background: rgba(255,255,255,0.25);
+            margin: 18px 0;
+        }
     </style>
 </head>
 <body>
 
-    <h1>Stage de Développement Web PHP</h1>
+    <h1>Mes Stages</h1>
 
+    <!-- ===== STAGE 1: Capgemini / Salesforce CRM ===== -->
     <div class="section">
-        <h2>1. Participation à l'élaboration des cahiers des charges</h2>
+        <h2>Stage : Consultant CRM Salesforce — Capgemini (Avril 2025 – Juillet 2025)</h2>
+
+        <div class="meta">
+            <span class="badge">Client : SNCF</span>
+            <span class="badge">Domaine : Service Cloud / CRM</span>
+            <span class="badge">Méthodo : Agile (Scrum)</span>
+            <span class="badge">Qualité : Tests Apex & Revues de code</span>
+        </div>
+
+        <h3>Contexte & objectifs</h3>
+        <p>
+            Intégré à l’équipe <strong>Capgemini</strong> en mission pour la <strong>SNCF</strong>, j’ai contribué à l’optimisation des
+            processus de <strong>gestion de la relation client</strong> autour des <strong>indemnisations</strong> et de la
+            <strong>création de bons digitaux</strong> (vouchers). L’enjeu : améliorer l’expérience agents et voyageurs,
+            sécuriser les données, et réduire le temps de traitement des demandes.
+        </p>
+
+        <h3>Environnement technique</h3>
+        <ul class="grid-2">
+            <li><strong>Salesforce</strong> (Service Cloud, Case Management, Omni-Channel)</li>
+            <li><strong>Apex</strong> (classes, triggers, batchs, schedulables)</li>
+            <li><strong>Lightning Web Components (LWC)</strong>, <strong>JavaScript</strong></li>
+            <li><strong>SOQL</strong> / SOSL, <strong>Flows</strong> (Screen/Record-Triggered)</li>
+            <li><strong>REST</strong> (Apex REST / callouts), <strong>Named Credentials</strong></li>
+            <li><strong>Salesforce DX</strong>, Sandboxes (Dev/Test), <strong>Git</strong> (feature branches)</li>
+        </ul>
+
+        <div class="divider"></div>
+
+        <h3>Responsabilités clés</h3>
+        <ul>
+            <li>Développement de <strong>composants LWC</strong> pour assister les agents dans le traitement des
+                <strong>indemnisations</strong> : formulaires dynamiques, pré-remplissage via SOQL, validations front.</li>
+            <li>Écriture de <strong>logique Apex</strong> (services, triggers, handlers) pour l’automatisation d’états de
+                dossiers, la génération de <strong>bons digitaux</strong> et les contrôles de cohérence.</li>
+            <li>Conception de <strong>Flows</strong> (screen & record-triggered) pour orchestrer des parcours agents sans code
+                superflu et fiabiliser les transitions (ex. passage <em>“Éligible” → “Bon émis”</em>).</li>
+            <li>Mise en place de <strong>callouts REST</strong> sécurisés (Named Credentials) vers des services internes pour
+                la vérification d’éligibilité et l’émission/validation des vouchers.</li>
+            <li>Rédaction de <strong>tests Apex</strong> (>75% de couverture sur les classes développées), gestion des
+                <strong>données de test</strong> et scénarios nominaux/erreur.</li>
+            <li>Participation aux <strong>revues de code</strong>, résolutions d’issues et <strong>merges</strong> via Git,
+                packaging via <strong>SFDX</strong> et déploiements en sandbox.</li>
+            <li>Contribution aux <strong>spécifications</strong> (user stories), démonstrations en sprint review et maintien
+                de la <strong>documentation</strong> technique/fonctionnelle.</li>
+        </ul>
+
+        <h3>Architecture & bonnes pratiques</h3>
+        <ul>
+            <li>Adoption d’un <strong>pattern service</strong> (classes Apex dédiées) + <strong>handler</strong> pour
+                séparer les responsabilités (lisibilité, testabilité).</li>
+            <li>Gestion rigoureuse des <strong>transactions</strong> (bulkification, limites gouverneurs, try/catch avec
+                <em>error framework</em> simple pour logs fonctionnels).</li>
+            <li>Validation <strong>côté LWC</strong> et <strong>côté serveur</strong> (Apex) pour éviter les incohérences.</li>
+            <li>Usage de <strong>Custom Metadata/Settings</strong> pour les paramètres (seuils, modèles de bons, règles).</li>
+            <li>Respect des <strong>profils</strong> / <strong>permission sets</strong> et règles de partage pour la
+                confidentialité des données clients.</li>
+        </ul>
+
+        <h3>Réalisations principales</h3>
+        <ul>
+            <li><strong>Wizard LWC “Indemnisation”</strong> : étapes guidées (vérif. éligibilité → calcul → justification →
+                confirmation), gestion d’états, messages d’erreur clairs, et enregistrements atomiques.</li>
+            <li><strong>Service Apex “VoucherService”</strong> : génération et suivi de <em>bons digitaux</em>, intégration
+                avec un service externe (callout), webhooks de confirmation, et journalisation.</li>
+            <li><strong>Flow d’orchestration</strong> : déclenchement à la mise à jour d’un <em>Case</em>, création des
+                tâches liées, notifications aux équipes et mise à jour des <strong>SLAs</strong>.</li>
+            <li><strong>Tableaux de bord</strong> (rapports Salesforce) pour suivre le volume de dossiers traités,
+                délais, et statut des bons (émis/utilisés/expirés).</li>
+        </ul>
+
+        <h3>Qualité, sécurité & conformité</h3>
+        <ul>
+            <li>Couverture de tests Apex sur la logique développée (cas nominaux + erreurs + limites gouverneurs).</li>
+            <li>Validation d’entrée stricte (LWC) + garde-fous Apex (null safety, contrôles métier).</li>
+            <li>Respect des <strong>règles de partage</strong>, <strong>Field Level Security</strong> et <strong>audit</strong>
+                (History Tracking) sur les objets sensibles.</li>
+            <li>Documentation des <strong>rôles/profils</strong> et revue périodique des accès.</li>
+        </ul>
+
+        <h3>Résultats & impact</h3>
+        <ul>
+            <li>Simplification du parcours agent (moins d’écrans, validations automatiques, messages clairs).</li>
+            <li>Réduction des erreurs de saisie grâce aux contrôles front/back et aux Flows guidés.</li>
+            <li>Meilleure traçabilité des <em>bons digitaux</em> (statuts, historisation, rapports).</li>
+            <li>Base robuste et testée pour des évolutions ultérieures (nouvelles règles d’éligibilité, nouveaux canaux).</li>
+        </ul>
+
+        <h3>Compétences développées</h3>
+        <ul class="grid-2">
+            <li>Conception et développement <strong>Apex</strong> & <strong>LWC</strong> orientés services.</li>
+            <li>Écriture de <strong>tests unitaires Apex</strong> et gestion de données de test.</li>
+            <li>Maîtrise des <strong>Flows</strong> pour l’orchestration métier.</li>
+            <li>Intégrations <strong>REST</strong> sécurisées (Named Credentials, callouts, gestion d’erreurs).</li>
+            <li>Pratiques <strong>Git</strong> (branches, PR, code review) et <strong>SFDX</strong> (sandboxes, packaging).</li>
+            <li>Collaboration en <strong>Agile/Scrum</strong> (user stories, dailies, sprint reviews).</li>
+        </ul>
+    </div>
+
+    <!-- ===== STAGE 2: Développement Web PHP (existant) ===== -->
+    <div class="section">
+        <h2>Stage de Développement Web PHP</h2>
+
+        <h3>1. Participation à l'élaboration des cahiers des charges</h3>
         <p>La première étape du projet a été de participer à l'élaboration des <strong>cahiers des charges</strong>, un document essentiel pour définir les besoins du client et les spécifications fonctionnelles du site. En collaboration avec le client, nous avons déterminé :</p>
         <ul>
             <li>Les fonctionnalités nécessaires pour la gestion des produits (ajout, modification, suppression).</li>
@@ -111,10 +260,8 @@
             <li>Les besoins en gestion des utilisateurs (administrateurs, clients, etc.).</li>
             <li>Les exigences concernant l’interface utilisateur (facilité d’utilisation, accessibilité, design responsive).</li>
         </ul>
-    </div>
 
-    <div class="section">
-        <h2>2. Conception et gestion de la base de données</h2>
+        <h3>2. Conception et gestion de la base de données</h3>
         <p>J’ai utilisé <strong>MySQL</strong> pour concevoir la base de données, comprenant :</p>
         <ul>
             <li>Les produits (nom, description, prix, stock, catégorie).</li>
@@ -122,10 +269,8 @@
             <li>Les commandes (produits commandés, quantité, montant total, statut de la commande).</li>
             <li>Les paiements (détails de la transaction, méthode de paiement).</li>
         </ul>
-    </div>
 
-    <div class="section">
-        <h2>3. Développement du site avec PHP et CodeIgniter</h2>
+        <h3>3. Développement du site avec PHP et CodeIgniter</h3>
         <p>J'ai utilisé le <strong>framework CodeIgniter</strong> pour structurer le projet, en mettant en place :</p>
         <ul>
             <li>Des contrôleurs et modèles pour la gestion des utilisateurs, des produits et des commandes.</li>
