--- a/cv.html
+++ b/cv.html
@@ -105,8 +105,14 @@
         <li><strong>Bases de données :</strong> Conception et gestion relationnelle optimisée avec SQL.</li>
         <li><strong>Outils :</strong> Utilisation d’outils collaboratifs tels que Git pour le versionnement, et JUnit pour les tests unitaires.</li>
     </ul>
+
    <h2>Projets Réalisés</h2>
         <ul>
+            <li><strong>Application de gestion des effectifs étudiants (2025) :</strong> Développement d'une application web complète (frontend + backend) pour la gestion académique.
+                <br><strong>Technologies :</strong> Spring Boot, Java, MySQL, Vue.js, Axios, Docker, Git/GitHub.
+                <br><strong>Fonctionnalités :</strong> CRUD complet, liaison étudiants-cours, validation des données, interface responsive.
+            </li>
+
             <li><strong>Site de location immobilière (2024) :</strong> Développement d’un site permettant aux propriétaires de publier des annonces de logement, avec des fonctionnalités pour les chercheurs de logements, telles que la consultation des annonces, l’ajout aux favoris et la possibilité de contacter directement les propriétaires. 
                 <br><strong>Langages utilisés :</strong> React.js, Node.js, Express.js.
             </li>
@@ -137,6 +143,7 @@
 
     <h2>Expériences Professionnelles</h2>
     <ul>
+        <li><strong>Stage Capgemini – Consultant CRM Salesforce (2025) :</strong> Développement et test de composants web pour optimiser la gestion des relations clients de la SNCF (indemnisations, bons digitaux). <em>Environnement : Apex, JavaScript, SOQL, Git.</em></li>
         <li><strong>Stage de Licence :</strong> Développement d'un site web pour la gestion et la vente de produits d’une boulangerie, utilisant PHP et le framework CodeIgniter.</li>
         <li><strong>Employé Polyvalent :</strong> Expérience chez Dominos Pizza depuis septembre 2022, avec des responsabilités croissantes incluant la gestion du service en l’absence du manager.</li>
     </ul>
