Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ali Wari - Ingénieur Logiciel</title>
+    <title>Ali Wari - Expert en Informatique & Systèmes d’Information</title>
     <style>
         /* Reset & Base Styling */
         * {
@@ -118,20 +118,23 @@
     <header>
         <h1>Ali Wari</h1>
         <p>
-            Étudiant en Master 1 Ingénierie Logicielle, passionné par le développement logiciel et les technologies innovantes, je suis à la recherche d'un stage de plusieurs mois à partir d'avril 2024 et d'une alternance à partir de septembre 2024. Découvrez mes projets, compétences et expériences en cliquant sur les boutons ci-dessous.
+            Étudiant en Master à l’EPSI Rennes dans le parcours <strong>Expert en Informatique et Systèmes d’Information</strong>, 
+            je suis passionné par le développement logiciel et les technologies innovantes. 
+            Actuellement, je recherche une <strong>alternance de deux ans à partir de septembre 2025</strong>. 
+            Découvrez mes projets, compétences et expériences en cliquant sur les boutons ci-dessous.
         </p>
     </header>
 
     <div class="button-container">
         <a href="apropos.html" class="button">À propos</a>
-        <a href="stage.html" class="button">Stage</a>
+        <a href="stage.html" class="button">Projets</a>
         <a href="cv.html" class="button">CV</a>
         <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/ali-wari-2a70a2272/" class="button" target="_blank">LinkedIn</a>
     </div>
 
     <footer>
-        &copy; 2024 | Créé par <a href="#">Ali Wari</a>
+        &copy; 2025 | Créé par <a href="#">Ali Wari</a>
     </footer>
 </body>
 </html>
