--- a/apropos.html
+++ b/apropos.html
@@ -104,44 +104,59 @@
 
     <div class="content-container">
         <div class="section">
-            <h2>Parcours académique et formation</h2>
+            <h2>Mon histoire et mon parcours</h2>
             <p>
-                Je suis titulaire d’une <strong>licence en informatique</strong>, obtenue à l’Université de Bretagne Occidentale. Cette formation m’a permis de consolider mes bases en développement, en algorithmique et en gestion des systèmes informatiques. Elle a marqué le début de mon immersion dans le monde de l’informatique, avec des cours à la fois pratiques et théoriques qui m’ont donné une solide compréhension des fondamentaux du métier.
+                Originaire d’Afrique centrale, j’ai toujours été fasciné par le monde de l’informatique. Très jeune, j’observais mon grand frère coder, et c’est là qu’est née ma passion pour la programmation et les systèmes. 
+                Mon arrivée en France m’a permis de transformer cette passion en un véritable projet professionnel. 
             </p>
             <p>
-                Actuellement, je poursuis un <strong>Master 1 en ingénierie logicielle</strong>, un domaine qui m’a toujours fasciné par ses défis et ses possibilités d’innovation. Cette spécialisation me permet de perfectionner mes connaissances en architecture logicielle, en développement de logiciels complexes et en gestion de projets tout en maîtrisant les outils et technologies nécessaires pour évoluer dans un environnement professionnel exigeant.
+                Après avoir obtenu mon <strong>baccalauréat scientifique</strong>, j’ai intégré l’Université de Bretagne Occidentale où j’ai décroché une <strong>licence en informatique</strong>. 
+                Cette étape a marqué le point de départ de mon immersion dans le développement logiciel, la gestion de projets et les bases de données.
+            </p>
+            <p>
+                Aujourd’hui, je poursuis un <strong>Master à l’EPSI Rennes en Expert en Informatique et Systèmes d’Information</strong>. 
+                Je recherche une <strong>alternance de deux ans à partir de septembre 2025</strong> afin de mettre en pratique mes compétences et d’apporter une réelle valeur à une entreprise ambitieuse.
             </p>
         </div>
 
         <div class="section">
-            <h2>Compétences développées</h2>
-            <p>Mon parcours académique et personnel m’a permis de développer des compétences approfondies dans plusieurs domaines clés de l’informatique :</p>
+            <h2>Mes projets et réalisations</h2>
+            <p>
+                J’ai eu l’opportunité de travailler sur différents projets académiques et personnels qui m’ont permis de développer des compétences variées :
+            </p>
             <ul>
-                <li><strong>Développement logiciel :</strong> Maîtrise des langages Java, C, PHP, JavaScript, ainsi que des frameworks tels que React et Node.js.</li>
-                <li><strong>Gestion de bases de données :</strong> Expertise en SQL, conception et gestion de bases de données avec SQL Server et autres SGBD relationnels.</li>
-                <li><strong>Méthodologie et organisation :</strong> Une approche rigoureuse, fondée sur la curiosité, l’organisation et la rigueur. Je mets un point d’honneur à structurer le code et à assurer une documentation précise des projets.</li>
+                <li><strong>Site de location immobilière</strong> : Développé avec React.js, Node.js et Express.js, permettant aux propriétaires de publier des annonces et aux chercheurs de logements de les consulter et contacter directement.</li>
+                <li><strong>Application Java de gestion académique</strong> : Gestion des étudiants, des unités d’enseignement et attribution automatique des groupes via Java, JavaFX et MySQL.</li>
+                <li><strong>Application mobile en Kotlin</strong> : Un quiz sur les capitales du monde connecté à Firebase pour la gestion des scores.</li>
+                <li><strong>Projet en C avec Glade</strong> : Développement d’une application permettant de flouter des images BMP.</li>
+            </ul>
+            <p>
+                Ces expériences m’ont appris à allier <strong>autonomie, créativité et rigueur</strong> dans un contexte technique exigeant.
+            </p>
+        </div>
+
+        <div class="section">
+            <h2>Compétences et valeurs</h2>
+            <p>
+                Grâce à mon parcours, j’ai acquis des compétences solides dans les domaines suivants :
+            </p>
+            <ul>
+                <li><strong>Développement full-stack :</strong> Java, C, PHP, JavaScript, React, Node.js.</li>
+                <li><strong>Gestion de bases de données :</strong> SQL, MySQL, SQL Server, conception et optimisation de SGBD.</li>
+                <li><strong>Outils modernes :</strong> Docker, Git/GitHub, CI/CD, tests unitaires.</li>
+                <li><strong>Soft skills :</strong> Curiosité, autonomie, capacité d’adaptation et goût du défi.</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>Ma méthodologie</h2>
+            <h2>Ma vision et ma motivation</h2>
             <p>
-                Ma démarche professionnelle repose sur trois valeurs essentielles : <strong>curiosité</strong>, <strong>organisation</strong> et <strong>rigueur</strong>.
-            </p>
-            <ul>
-                <li><strong>Curiosité :</strong> Toujours à la recherche de nouvelles technologies et méthodologies, je m'efforce de rester à jour avec les évolutions du secteur pour offrir des solutions innovantes.</li>
-                <li><strong>Organisation :</strong> La planification et la gestion du temps sont essentielles pour moi. Je structure chaque projet en étapes claires pour assurer une progression régulière et maîtrisée.</li>
-                <li><strong>Rigueur :</strong> Attentif aux détails dans le code, la documentation et la gestion des bases de données, je veille à ce que chaque projet soit de qualité optimale et fiable.</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Motivation pour l’avenir</h2>
-            <p>
-                Aujourd’hui, je suis déterminé à exceller dans le domaine de l’ingénierie logicielle. Mon parcours, combiné à ma passion et ma méthodologie de travail, me permet de relever les défis techniques avec confiance. Chaque projet représente une opportunité d’apprentissage, et je suis prêt à m’investir pleinement dans des projets ambitieux et innovants.
+                Mon objectif est clair : contribuer à des projets ambitieux qui allient innovation et impact concret. 
+                Pour moi, l’informatique est bien plus qu’un domaine d’étude, c’est une <strong>vocation</strong>.
             </p>
             <p>
-                Pour moi, l’informatique n’est pas simplement un domaine d’étude, c’est une véritable vocation. Je suis enthousiaste à l’idée de continuer à approfondir mes compétences et de mettre à profit mon expertise pour relever les défis de l’ingénierie logicielle.
+                Je suis convaincu que mon parcours atypique, ma détermination et mon envie constante d’apprendre peuvent faire la différence dans une équipe. 
+                Rejoindre une entreprise en alternance, c’est pour moi l’occasion de mettre ma passion et mes compétences au service de solutions concrètes, tout en continuant à progresser aux côtés de professionnels expérimentés.
             </p>
         </div>
 
