--- a/cv.html
+++ b/cv.html
@@ -88,9 +88,9 @@
         <li><strong>Application SaaS de location immobilière (2025) :</strong> Plateforme pour publier et rechercher des logements, favoris, contact direct. <em>Stack : React.js, Node.js, Express.js.</em></li>
         <li><strong>Application mobile Kotlin (2024) :</strong> Jeu éducatif sur les capitales du monde (Android Studio, Kotlin, Firebase) avec quiz interactif et sauvegarde des scores.</li>
         <li><strong>Site e-commerce Boulangerie (2023) :</strong> Développement front et back (PHP, Symfony, Bootstrap, MySQL) pour gérer produits et ventes.</li>
-        <li><strong>Validation de compétences (2024) :</strong> Application web QCM (HTML, CSS, Bootstrap, PHP, JS). <a href="https://github.com/AliWari2/EscapeWeb.git" target="_blank">GitHub</a>.</li>
+        <li><strong>Validation de compétences (2024) :</strong> Application web QCM (HTML, CSS, Bootstrap, PHP, JS).</li>
         <li><strong>Application de formation (2024) :</strong> Gestion étudiants, unités et groupes (Java, JavaFX, JUnit, Git).</li>
-        <li><strong>Application de floutage d’image (2023) :</strong> Flou sur images BMP (C, Glade). <a href="https://github.com/AliWari2/Degradation-de-l-image.git" target="_blank">GitHub</a>.</li>
+        <li><strong>Application de floutage d’image (2023) :</strong> Flou sur images BMP (C, Glade). </li>
         <li><strong>Jeu Space Invaders (2023) :</strong> Jeu POO en Python/Tkinter (mouvements, tirs, collisions, scores).</li>
     </ul>
 
